--- a/07.08 CSS/index.html
+++ b/07.08 CSS/index.html
@@ -4,15 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Trabalho HTML</title>
-    <style>
-        table,
-        th,
-        td {
-            border: solid rgb(0, 0, 0);
-        }
-
-    </style>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="Exercício.css">
 
 
 </head>
@@ -24,7 +16,7 @@
         <h1> HEADER</h1>
         <p id="oi">OI!</p>
         <mark style=" font-size: xx-large;">Tabela</mark>
-        
+
         <table>
             <tbody>
                 <tr>
@@ -53,16 +45,27 @@
         <b>Pesquisei como coloca borda e coloquei uma borda simples, para organizar melhor</b>
     </header>
     <nav>
-        <h2>NAV</h2>
+        <h2>Abaixo segue uma pergunta para que você responda!</h2>
+        <h2>Qual time você torce?</h2>
+        <label for="timeSelect">Time:</label>
+        <select id="timeSelect" name="time" style="width: 200px; padding: 5px; margin-bottom: 10px;">
+            <option value="">-- Selecione um time --</option>
+            <option value="inter">Inter</option>
+            <option value="gremio">Grêmio</option>
+            <option value="palmeiras">Palmeiras</option>
+            <option value="flamengo">Flamengo</option>
+            <option value="corinthians">Corinthians</option>
+        </select>
     </nav>
     <selection>
-        <h3>SELECTION</h3>
-        <h1>Inter &#62; Grêmio</h1>
+        <h1 id="inter"> Inter </h1> &#62; <h1 id="gremio">Grêmio</h1>
+        <span id="inter">Inter</span> &#62; <span id="gremio">Grêmio</span>
     </selection>
     <div>
         <h2>Brasil</h2>
         <p>Uma das maiores cidades do Brasil é a gigante cidade <strong>&#8594; São Miguel do Oeste</strong>.</p>
         <mark> Informação falsa, LOGICAMENTE</mark>
+        <br>
     </div>
     <article>
         <i>ARTICLE</i>
@@ -78,17 +81,16 @@
         </form>
     </article>
     <footer>
-        <h1>FOOTER</h1>
+        <h2>FOOTER</h2>
         <img src="Pedro.png" alt="Imagem escrito Pedro" Icon width="150" height="150">
-        <br><a href="Pedro.png" download>Pedro</a>
+        <br><a href="Pedro.png" download>Clique para baixar a imagem PEDRO</a>
 
     </footer>
     <aside>
-        <h2>ASIDE</h2>
+        <h5>Repositório para ver o github do pedro está no link abaixo</h5>
         <br>
         &reg;<a href="https://github.com/PedroSegalin12/HTML.git" target="_blank">Link:Repositório das
             atividades"</a>&reg;
-        <!-- não sei pq mas o &#174; é muito mais bonito que o &reg; -->
     </aside>
 </body>
 
