dia 13, mas tem mais coisa pra fazer

--- a/13.08/index.html
+++ b/13.08/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Trabalho HTML</title>
-    <link rel="stylesheet" href="Exercício.css">
+    <link rel="stylesheet" href="dia13.css">
 
 
 </head>
@@ -13,10 +13,27 @@
 <body>
 
     <header>
-        <h1> HEADER</h1>
-        <p id="oi">OI!</p>
-        <mark style=" font-size: xx-large;">Tabela</mark>
+        <h1> HTML e CSS exercícios Pedro</h1>
+        <div class="container">
+            <div class="box">
+                <img src="carro.webp" alt="Imagem de exemplo">
+            </div>
 
+            <div class="box menu">
+                <ul>
+                    <li><a href="#">Home</a></li>
+                    <li><a href="#">Sobre</a></li>
+                    <li><a href="#">Contato</a></li>
+                </ul>
+            </div>
+        </div>
+        <br>
+        <p class="linha"></p>
+        <br>
+        <br>
+        <mark style=" font-size: xx-large;">Tabela</mark>
+        <br>
+        <br>
         <table>
             <tbody>
                 <tr>
@@ -54,6 +71,7 @@
             <option value="palmeiras">Palmeiras</option>
             <option value="flamengo">Flamengo</option>
             <option value="corinthians">Corinthians</option>
+            <option value="corinthians">Outro..</option>
         </select>
     </nav>
     <selection>
@@ -78,12 +96,15 @@
             <br>
             <button>Cadastrar formulário</button>
         </form>
+        <br>
     </article>
-    <footer>
-        <h2>FOOTER</h2>
-        <img src="Pedro.png" alt="Imagem escrito Pedro" Icon width="150" height="150">
-        <br><a href="Pedro.png" download>Clique para baixar a imagem PEDRO</a>
-
+    <footer> <!--caso a imagem não esteja funcionando, arraste ela para dentro do dia do código*/ -->
+        <div class="caixa">
+            <img src="Pedro.png" alt="Imagem escrito Pedro" Icon width="150" height="150">
+            <br>
+            <br>
+            <a href="Pedro.png" download>Clique para baixar a imagem PEDRO</a>
+        </div>
     </footer>
     <aside>
         <h5>Repositório para ver o github do pedro está no link abaixo</h5>
