dia 18, falta terminar

--- a/13.08/index.html
+++ b/13.08/index.html
@@ -14,16 +14,15 @@
 
     <header>
         <h1> HTML e CSS exercícios Pedro</h1>
-        <div class="container">
+        <div class="container-pai">
             <div class="box">
-                <img src="carro.webp" alt="Imagem de exemplo">
+                <img src="uno.jpg" alt="Imagem de exemplo">
             </div>
-
             <div class="box menu">
                 <ul>
-                    <li><a href="#">Home</a></li>
-                    <li><a href="#">Sobre</a></li>
+                    <li><a href="#">Página</a></li>
                     <li><a href="#">Contato</a></li>
+                    <li><a href="#">Configurações</a></li>
                 </ul>
             </div>
         </div>
@@ -36,6 +35,7 @@
         <br>
         <table>
             <tbody>
+                
                 <tr>
                     <th>Nome</th>
                     <th>Idade</th>
